k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: dev
  labels:
    app: synapse
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8008
    targetPort: 8008
    protocol: TCP
  - name: federation
    port: 8448
    targetPort: 8448
    protocol: TCP
  selector:
    app: synapse
